new code challenges implemented